# GPGPU_App

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/GLWrapper/: CMakeLists.txt  GLWrapper.h
lib/glad/: glad.c
lib/glad/glad/: glad.h
